--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@redux-devtools/extension": "^3.2.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "antd": "^5.4.0",
+    "axios": "^1.3.5",
     "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-flow": "^2.29.1",
     "eslint-plugin-jsx": "^0.1.0",
@@ -15,9 +20,11 @@
     "eslint-plugin-typescript": "^0.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-id-generator": "^3.0.2",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.59.3",
     "web-vitals": "^2.1.4"
   },
